--- a/jtouch.html
+++ b/jtouch.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="sea.js"></script>
     <script type="text/javascript" src="jhash-2.1.js"></script>
     <script type="text/javascript" src="pageslider.js"></script>
+    <script type="text/javascript" src="events.js"></script>
     <script type="text/javascript" src="jtouch.js"></script>
     <link rel="stylesheet" href="css/pageslider.css">
     <link rel="stylesheet" href="css/styles.css">
@@ -17,6 +18,7 @@
 <style type="text/css">
     .page {
         background: #fff;
+        height: auto;
     }
 </style>
 
