--- a/detail.html
+++ b/detail.html
@@ -4,5 +4,6 @@
         <li><a href="#list">list</a></li>
         <li><a href="#detail">detail</a></li>
         <li><a href="#order">order</a></li>
+        <li><a href="#main">main</a></li>
     </ul>
 </div>
