--- a/order.html
+++ b/order.html
@@ -4,6 +4,7 @@
         <li><a href="#list">list</a></li>
         <li><a href="#detail">detail</a></li>
         <li><a href="#order">order</a></li>
+        <li><a href="#main">main</a></li>
 
         <li><a href="#search">search</a></li>
         <li><a href="#list">list</a></li>
